<resources>
    <string name="app_name">Mulch App</string>
    <string name="mulch_cost">Mulch cost: $%.2f</string>
    <string name="sales_tax">Sales tax: $%.2f</string>
    <string name="delivery_charge">Delivery charge: $%.2f</string>
    <string name="total">Total: $%.2f</string>
    <string name="premium_bark_mulch_n_55_cubic_yard">Premium Bark Mulch\n $55 cubic yard</string>
    <string name="special_blend_n_35_cubic_yard">Special Blend\n $35 cubic yard</string>
    <string name="triple_ground_n_40_cubic_yard">Triple Ground\n $40/cubic yard</string>
    <string name="chocolate_dyed_n_38_cubic_yard">Chocolate Dyed\n $38/cubic yard</string>
    <string name="red_dyed_n_38_cubic_yard">Red Dyed\n $38/cubic yard</string>
    <string name="black_dyed_n_38_cubic_yard">Black Dyed\n $38/cubic yard</string>
    <string name="play_mat_n_38_cubic_yard">Play Mat\n $38/cubic yard</string>
    <string name="cedar_n_38_cubic_yard">Cedar\n $38/cubic yard</string>
    <string name="next">Next</string>
    <string name="select_mulch_type">Select Mulch Type</string>
    <string name="order_summary">Order Summary</string>
    <string name="back">Back</string>
    <string name="place_order">Place Order</string>
    <string name="enter_number_of_cubic_yards">Enter number of cubic yards</string>
    <string name="nextbutton">Next</string>
    <string name="backbutton">Back</string>
    <string name="cubic_yards">Cubic Yards</string>
    <string name="street">Street</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>

</resources>