<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/premiumbarkmulch"
            android:layout_width="396dp"
            android:layout_height="48dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="329dp"
            android:text="@string/premium_bark_mulch_n_55_cubic_yard" />

        <RadioButton
            android:id="@+id/specialblend"
            android:layout_width="400dp"
            android:layout_height="48dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="329dp"
            android:text="@string/special_blend_n_35_cubic_yard" />

        <RadioButton
            android:id="@+id/tripleground"
            android:layout_width="400dp"
            android:layout_height="48dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="329dp"
            android:text="@string/triple_ground_n_40_cubic_yard" />

        <RadioButton
            android:id="@+id/chocolatedyed"
            android:layout_width="400dp"
            android:layout_height="48dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="329dp"
            android:text="@string/chocolate_dyed_n_38_cubic_yard" />

        <RadioButton
            android:id="@+id/reddyed"
            android:layout_width="400dp"
            android:layout_height="48dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="329dp"
            android:text="@string/red_dyed_n_38_cubic_yard" />

        <RadioButton
            android:id="@+id/blackdyed"
            android:layout_width="400dp"
            android:layout_height="48dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="329dp"
            android:text="@string/black_dyed_n_38_cubic_yard" />

        <RadioButton
            android:id="@+id/playmat"
            android:layout_width="400dp"
            android:layout_height="48dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="329dp"
            android:text="@string/play_mat_n_38_cubic_yard" />

        <RadioButton
            android:id="@+id/cedar"
            android:layout_width="400dp"
            android:layout_height="48dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="329dp"
            android:text="@string/cedar_n_38_cubic_yard" />


    </RadioGroup>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="555dp"
        android:layout_marginEnd="85dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/select_mulch_type"
        android:textSize="14pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>