<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MulchOrderActivity">


    <TextView
        android:id="@+id/mulchTypeSummaryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:text=""
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enterCubicYardsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mulchTypeSummaryTextView"
        android:layout_marginStart="95dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="117dp"
        android:text="@string/enter_number_of_cubic_yards"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="555dp"
        android:layout_marginEnd="85dp"
        android:text="@string/nextbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="555dp"
        android:layout_marginEnd="85dp"
        android:text="@string/backbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875" />


    <EditText
        android:id="@+id/cubicYardsEditText"
        android:layout_width="61dp"
        android:layout_height="55dp"
        android:hint="@string/cubic_yards"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterCubicYardsTextView" />

    <EditText
        android:id="@+id/streetEditText"
        android:layout_width="424dp"
        android:layout_height="61dp"
        android:layout_below="@id/deliveryAddressLabel"
        android:layout_marginBottom="8dp"
        android:hint="@string/street"
        app:layout_constraintBottom_toTopOf="@+id/cityEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/deliveryAddressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cubicYardsEditText"
        android:layout_marginBottom="4dp"
        android:text="@string/delivery_address"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/streetEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/stateEditText"
        android:layout_width="440dp"
        android:layout_height="51dp"
        android:layout_below="@id/cityEditText"
        android:layout_marginBottom="4dp"
        android:hint="@string/state"
        app:layout_constraintBottom_toTopOf="@+id/zipEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/zipEditText"
        android:layout_width="452dp"
        android:layout_height="51dp"
        android:layout_below="@id/stateEditText"
        android:layout_marginBottom="4dp"
        android:hint="@string/zip_code"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="434dp"
        android:layout_height="51dp"
        android:layout_below="@id/zipEditText"
        android:layout_marginBottom="4dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/phoneEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="486dp"
        android:layout_height="66dp"
        android:layout_below="@id/emailEditText"
        android:layout_marginBottom="88dp"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/cityEditText"
        android:layout_width="428dp"
        android:layout_height="52dp"
        android:layout_below="@id/streetEditText"
        android:layout_marginBottom="4dp"
        android:hint="@string/city"
        app:layout_constraintBottom_toTopOf="@+id/stateEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Total -->

    <TextView
        android:id="@+id/mulchCostTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/deliveryAddressLabel"
        android:layout_marginEnd="-200dp"
        android:layout_marginBottom="-5dp"
        android:text="Mulch cost: "
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/salesTaxTextView"
        app:layout_constraintEnd_toStartOf="@+id/phoneEditText" />

    <TextView
        android:id="@+id/salesTaxTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mulchCostTextView"
        android:layout_marginEnd="224dp"
        android:text="Sales tax: "
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/deliveryChargeTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/deliveryChargeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/salesTaxTextView"
        android:layout_marginEnd="184dp"
        android:layout_marginBottom="3dp"
        android:text="Delivery charge: "
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/totalTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/deliveryChargeTextView"
        android:layout_marginEnd="256dp"
        android:layout_marginBottom="1dp"
        android:text="Total: "
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>